--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "owl-charts",
+  "name": "cowlde-charts",
   "version": "1.0.0",
   "main": "dist/index.js",
   "module": "dist/index.js",
