--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cowlde-charts",
+  "name": "findme-emaki-charts",
   "version": "1.0.0",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -9,9 +9,7 @@
     "package.json"
   ],
   "dependencies": {
-    "react-scripts": "5.0.1",
-    "recharts": "^2.5.0",
-    "typescript": "^4.9.5"
+    "recharts": "^2.5.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.21.4",
@@ -35,19 +33,17 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prop-types": "^15.8.1",
-    "storybook": "^7.0.4"
+    "storybook": "^7.0.4",
+    "typescript": "^4.9.5"
   },
   "peerDependencies": {
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "compile": "tsc",
     "deploy": "npm publish",
     "storybook": "storybook dev -p 6006",
