--- a/tsconfig.json
+++ b/tsconfig.json
@@ -107,5 +107,10 @@
     //"skipLibCheck": true                               /* Skip type checking all .d.ts files. */
   },
   "include": ["src"],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules", 
+    "src/components/**/**/*.stories.ts",
+    "src/components/**/**/*.cy.tsx", 
+    "src/common/control.ts"
+  ]
 }
