--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.23",
+    "@types/react": "^18.0.35",
+    "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
+    "chromatic": "^6.17.3",
     "cypress": "^12.10.0",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
@@ -38,8 +41,6 @@
     "typescript": "^4.9.5"
   },
   "peerDependencies": {
-    "@types/react": "^18.0.35",
-    "@types/react-dom": "^18.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
@@ -49,6 +50,7 @@
     "deploy": "npm publish",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
+    "static-storybook": "npx http-server storybook-static",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
     "fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
     "cypress": "cypress open"
