--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cowlde-charts",
-  "version": "1.1.0",
+  "version": "1.1.2",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "files": [
@@ -41,8 +41,8 @@
     "typescript": "^4.9.5"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^16.0.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.0.0 || ^17.0.0 || ^18.0.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
